crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	int32_t capacity;
	int32_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint32_t ffi_servicepoint_binding_uniffi_rust_future_complete_u32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_i32(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_i32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_i32(
	void* handle,
	RustCallStatus* out_status
);
int32_t ffi_servicepoint_binding_uniffi_rust_future_complete_i32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_u64(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_u64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_u64(
	void* handle,
	RustCallStatus* out_status
);
uint64_t ffi_servicepoint_binding_uniffi_rust_future_complete_u64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_i64(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_i64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_i64(
	void* handle,
	RustCallStatus* out_status
);
int64_t ffi_servicepoint_binding_uniffi_rust_future_complete_i64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_f32(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_f32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_f32(
	void* handle,
	RustCallStatus* out_status
);
float ffi_servicepoint_binding_uniffi_rust_future_complete_f32(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_f64(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_f64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_f64(
	void* handle,
	RustCallStatus* out_status
);
double ffi_servicepoint_binding_uniffi_rust_future_complete_f64(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_pointer(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_pointer(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_pointer(
	void* handle,
	RustCallStatus* out_status
);
void* ffi_servicepoint_binding_uniffi_rust_future_complete_pointer(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_rust_buffer(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_rust_buffer(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_rust_buffer(
	void* handle,
	RustCallStatus* out_status
);
RustBuffer ffi_servicepoint_binding_uniffi_rust_future_complete_rust_buffer(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_poll_void(
	void* handle,
	void* uniffi_callback,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_cancel_void(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_free_void(
	void* handle,
	RustCallStatus* out_status
);
void ffi_servicepoint_binding_uniffi_rust_future_complete_void(
	void* handle,
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_col(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_row(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_col(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_row(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_to_cp437(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_command_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_connection_send(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height(
	RustCallStatus* out_status
);