crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint/servicepoint_binding_uniffi.cs


    [DllImport("servicepoint_binding_uniffi")]
    public static extern uint ffi_servicepoint_binding_uniffi_rust_future_complete_u32(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_i32(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_i32(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_i32(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern int ffi_servicepoint_binding_uniffi_rust_future_complete_i32(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_u64(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_u64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_u64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ulong ffi_servicepoint_binding_uniffi_rust_future_complete_u64(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_i64(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_i64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_i64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern long ffi_servicepoint_binding_uniffi_rust_future_complete_i64(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_f32(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_f32(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_f32(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern float ffi_servicepoint_binding_uniffi_rust_future_complete_f32(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_f64(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_f64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_f64(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern double ffi_servicepoint_binding_uniffi_rust_future_complete_f64(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_pointer(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_pointer(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_pointer(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern SafeHandle ffi_servicepoint_binding_uniffi_rust_future_complete_pointer(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_rust_buffer(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_rust_buffer(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_rust_buffer(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern RustBuffer ffi_servicepoint_binding_uniffi_rust_future_complete_rust_buffer(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_poll_void(IntPtr @handle,IntPtr @uniffiCallback
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_cancel_void(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_free_void(IntPtr @handle
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern void ffi_servicepoint_binding_uniffi_rust_future_complete_void(IntPtr @handle,ref RustCallStatus _uniffi_out_err
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_func_get_constants(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_col(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_row(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_col(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_row(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_to_cp437(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_command_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_connection_send(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height(
    );
